--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
+/* ######## GLOBALES ######## */
+
 body {
+  font-size: 16px;
   font-family: 'Roboto', sans-serif;
   color: #333333;
   background: #f0f0fa;
@@ -9,6 +12,8 @@ a {
   color: #0057ff;
 }
 
+/* ######## CONTAINER ######## */
+
 .container {
   max-width: 1200px;
   margin: 50px auto;
@@ -16,93 +21,106 @@ a {
 
 .box-shadow {
   box-shadow: 10px 10px 114px -53px rgba(0,0,0,0.75);
+  margin: 0 50px;
   padding: 50px;
   background: white;
 }
+
+/* ######## MAIN ######## */
 
 .main {
   position: relative;
 }
 
-img {
-  position: absolute;
-  height: 100%;
-  right: 0px;
-  top: 0px;
-  border-radius: 2px;
-}
-
 h1 {
   font-weight: 500;
-  font-size: 30px;
   margin: 0 0 10px 0;
-  font-size: 100px;
 }
 
 .role {
-  font-size: 20px;
+  font-size: 125%;
   margin: 0;
 }
 
-.location {
-  font-size: 14px;
-  margin: 0 0 10px 0;
+img {
+  display: none;
 }
 
-.email {
-  margin: 0;
-  font-size: 14px;
+@media (min-width:641px) {
+  h1 {
+    margin-right: 150px;
+    font-size: 400%;
+  }
+  img {
+    display: inline-block;
+    position: absolute;
+    height: 100%;
+    right: 0px;
+    top: 0px;
+    border-radius: 2px;
+  }
 }
+
+@media (min-width: 961px) {
+  h1 {
+    font-size: 520%;
+  }
+}
+
+/* ######## SECTION GLOBALS ######## */
+
+
 
 hr {
-  margin: 30px 0 10px 0;
-  border-color: transparent;
-  border-bottom-color: rgba(0, 0, 0, 0.7);
-}
-
-.section {
-  position: relative;
-  padding-left: 250px;
-}
-
-.section-hr {
+  margin: 50px 0 30px 0;
   border-color: transparent;
   border-bottom-color: rgba(0, 0, 0, 0.3);
 }
 
 h2 {
-  position: absolute;
-  top: 0;
-  left: 0;
+  font-size: 120%
   font-weight: 500;
-  font-size: 13px;
-  float: left;
-  margin: 2px 0 0 0;
 }
+
+@media (min-width: 961px) {
+  hr {
+    margin: 30px 0 10px 0;
+  }
+
+  .section {
+    position: relative;
+    padding-left: 250px;
+  }
+
+  h2 {
+    font-size: 80%;
+    width: 220px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 2px 0 0 0;
+  }
+}
+
 
 .section-item-title {
   font-weight: 500;
-  font-size: 17px;
+  font-size: 110%;
   margin: 0 0 5px 0;
 }
 
 .section-item-subtitle {
-  font-size: 18px;
+  font-size: 120%;
   margin: 0 0 5px 0;
 }
 
 .section-item-description {
-  font-size: 15px;
+  font-size: 95%;
   margin: 0 0 5px 0;
 }
 
 .section-item-ref {
   margin: 0 0 5px 0;
   color: #737373;
-  font-size: 13px;
-}
-
-
-@media (min-width: 900) {
-  /* TODO */
+  font-size: 80%;
 }
