--- a/css/styles.css
+++ b/css/styles.css
@@ -15,20 +15,20 @@ body {
 h1 {
   font-family: "roboto", sans-serif;
   font-weight: 500;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 h2 {
   font-family: "open-sans", sans-serif;
   font-weight: 300;
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 h3 {
   font-family: "open-sans", sans-serif;
   font-weight: 300;
   font-size: 18px;
+  margin-top: 0;
 }
 
 a {
