Split css in several files

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,128 +1,5 @@
-html {
-  margin: 0;
-  padding: 0;
-}
+@import './base.css';
+@import './header.css';
+@import './sections.css';
+@import './small-devices.css';
 
-body {
-  margin: 0;
-  padding: 20px;
-  font-family: "open-sans", "helvetica", sans-serif;
-  font-weight: 300;
-  color: #333;
-  background: #fafafa;
-}
-
-main {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
-a, a:hover, a:focus {
-  text-decoration: none;
-  outline: none;
-  color: #c09438;
-}
-
-a:hover {
-  color: #a17822;
-}
-
-a:focus {
-  color: #c09438;
-}
-
-p {
-  margin: 0 0 10px 0;
-}
-
-h1, h2, h3, h4 {
-  font-family: "roboto", "open-sas", sans-serif;
-  font-weight: 400;
-  font-size: inherit;
-  margin: 0 0 10px 0;
-}
-
-header, section {
-  padding: 20px 0;
-  border-bottom: solid 1px #777;
-}
-
-header {
-  text-align: center;
-}
-
-header h1 {
-  font-size: 36px;
-  font-weight: 500;
-}
-
-header #role {
-  font-size: 30px;
-}
-
-header #location {
-  font-size: 18px;
-}
-
-header img {
-  border-radius: 50%;
-  margin: 0 auto 10px auto;
-  max-width: 160px;
-  display: block;
-}
-
-header a {
-  display: block;
-  text-align: center;
-  margin: 0 0 10px 0;
-}
-
-section h2 {
-  font-size: 18px;
-  font-weight: 500;
-  margin-bottom: 20px;
-}
-section h3 {
-  font-weight: 500;
-}
-
-section p.final-paragraph {
-  border-bottom: solid 1px #ccc;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
-}
-
-section p.final-paragraph:last-child {
-  border-bottom: none;
-  margin: 0;
-  padding: 0;
-}
-
-@media (min-width: 768px), print {
-  header, section {
-    padding-left: 28%;
-    position: relative;
-  }
-
-  header img, section h2 {
-    position: absolute;
-    left: 0;
-    top: 20px;
-  }
-
-  header {
-    text-align: left;
-  }
-
-  header img {
-    height: 80%;
-    max-width: none;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-
-  header a {
-    display: inline-block;
-    margin: 0 20px 0 0;
-  }
-}
