--- a/assets/css/_base.css
+++ b/assets/css/_base.css
@@ -31,13 +31,16 @@ a:focus {
     color: #c09438;
 }
 
-p {
+p, h1, h2, h3, h4 {
     margin: 0 0 10px 0;
 }
 
-h1, h2, h3, h4 {
-    font-family: "roboto", "open-sas", sans-serif;
+h1, h2, h3 {
     font-weight: 400;
     font-size: inherit;
-    margin: 0 0 10px 0;
+}
+
+h4 {
+    color: #666;
+    font-weight: 300;
 }
