--- a/assets/css/_base.css
+++ b/assets/css/_base.css
@@ -6,7 +6,7 @@ html {
 body {
     margin: 0;
     padding: 20px;
-    font-family: "open-sans", "helvetica", sans-serif;
+    font-family: "helvetica", sans-serif;
     font-weight: 300;
     color: #333;
     background: #fafafa;
@@ -46,6 +46,7 @@ h1, h2, h3 {
 }
 
 h4 {
+    font-size: 14px;
     color: #666;
     font-weight: 300;
 }
