Rename css files to avoid 404 in github

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-@import './_base.css';
-@import './_header.css';
-@import './_sections.css';
+@import './base.css';
+@import './header.css';
+@import './sections.css';
 
